# procnii_todcm

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/: mapping.json
src/procnii_todcm/: cli.py  merge_images.py  utils_nifti.py
src/utils/: merge_images.py
test/input/subj1/: mapping.json
