[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "procnii_todcm"
version = "0.1.0"
description = "Convert processed NIfTI files to DICOM using nibabel and nii2dcm"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Guray Erus", email = "guray.erus@pennmedicine.upenn.edu" }
]

dependencies = [
  "nibabel==5.3.3",
  "nii2dcm==0.1.1",
  "numpy==2.4.1"
]

[project.scripts]
procnii_todcm = "procnii_todcm.cli:main"
